--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "rekord-react",
-  "version": "1.1.3",
+  "version": "1.0.0",
   "homepage": "https://github.com/Rekord/rekord-react",
   "authors": [
     "Philip Diffenderfer <pdiffenderfer@gmail.com>"
@@ -23,5 +23,9 @@
   "devDependencies": {
     "react": "~15.0.2",
     "babel": "*"
+  },
+  "dependencies": {
+    "react": "*",
+    "rekord": "^1.2.0"
   }
 }
