--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rekord-react",
-  "version": "1.1.3",
+  "version": "1.0.0",
   "description": "A rekord binding to React - adding Rekord.Bind",
   "author": "Philip Diffenderfer",
   "license": "MIT",
@@ -12,14 +12,19 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-qunit": "^1.3.0",
-    "gulp-shell": "^0.5.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5"
+    "gulp": "^3.8.10",
+    "gulp-check-filesize": "^2.0.1",
+    "gulp-concat": "^2.4.3",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.3.6",
+    "jshint": "^2.9.2"
+  },
+  "dependencies": {
+    "rekord": "^1.2.0"
   }
 }
