--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.4.3",
     "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-qunit": "^1.3.0",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
@@ -25,6 +26,7 @@
     "jshint": "^2.9.2"
   },
   "dependencies": {
+    "react": "*",
     "rekord": "^1.2.0"
   }
 }
