--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rekord-react",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A rekord binding to React - adding Rekord.Sync",
   "author": "Philip Diffenderfer",
   "license": "MIT",
+  "main": "build/rekord-react.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/Rekord/rekord-react.git"
